# lernspark

./: .env.test  .gitignore  LICENSE  README.md  build.sbt
conf/: log4j.properties  spark.conf
data/: Cargo.toml  README.md  data.sql  pipeline.sql
data/src/: aws.rs  main.rs  model.rs  sql.rs
docker/: Dockerfile
docker/spark/: Dockerfile
pipeline/: Dockerfile  README.md  build.sbt  pipeline.sql  requirements.txt  sandbox.ipynb
pipeline/src/main/: Pipeline.scala
scripts/macOS/: Brewfile  Brewfile.lock.json  bootstrap.sh  build-data.sh  define-data-model.sh  git-main-pr.sh  lernspark-data.sh  lernspark-play.sh  select-column-type.sh  select-constraints.sh  setup.sh  sql-column-constraints.sh  sql-column-type.sh  sql-setup.sh
scripts/windows/: build-data.ps1  git-main-pr.ps1
src/main/resource/: application.conf
src/main/scala/: SparkSessionBuilder.scala  Utilities.scala
