[package]
name = "data"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
aws-config = "1.2.0"
aws-sdk-s3 = "1.23.0"
aws-types = "1.2.0"
bytes = "1.6.0"
tokio = { version = "1.27.0", features = ["full"] }
uuid = "1.8.0"

[dev-dependencies]
tempdir = "0.3.7"
